[package]
name = "memguise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human_bytes = { version = "0.4.1", default-features = false}
rayon = "1.7.0"
rust-gpu-tools = { version = "0.6.1", default-features = false, features = ["opencl"]}
sysinfo = "0.28.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
